/*
Copyright 2023 Quark Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package node_mgr;

service NodeMgrService {
    rpc CreatePod (CreatePodReq) returns (CreatePodResp);
    rpc TerminatePod (TermniatePodReq) returns (TermniatePodResp);
}

message CreatePodReq {
  string node = 1;
  string pod = 2;
  string configMap = 3;
}

message CreatePodResp {
    string error = 2;
}

message TermniatePodReq {
  string podId = 1;
}

message TermniatePodResp {
    string error = 2;
}